# manual-material

./: .gitignore  README.md  base_legal.md  competencias_pf.md  conceitos.md  menu_principal.py  perfis_gestores.md  pyproject.toml  recursos_humanos.md  requirements.txt  roteiros.md  tarefas.md  texto_modelo.md
data/: execucao_siafi.db
img/alienacao/: fluxograma_baixa
pages/: execucao_siafi.py
roteiros/: acautelamento.md  alienacao.md  alteracao_bem.md  bi.md  cadastro_imoveis.md  conciliacao.md  configura_zebra.md  desfazimento.md  desmembramento_bem.md  entendimentos_institucionais.md  gestao_perfis_sipac.md  inclusao_frota.md  incorporacao_compra.md  incorporacao_doacao.md  incorporacoes.md  inventario.md  lancamentos_siafi.md  localidades_elog.md  localizacao_bens.md  movimentacao.md  reclassificacao_bens.md  relatorio_bens.md  requisicao_almox.md  viaturas.md
src/: gerar_fluxograma.py  organograma_pr.py
